--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/gabemeola/marketapts#readme",
   "dependencies": {
+    "aphrodite": "^0.5.0",
     "q": "^1.4.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
@@ -34,7 +35,6 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
-    "clean-css": "^3.4.19",
     "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-loader": "^0.4.3",
