--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "clean-css": "^3.4.19",
     "css-loader": "^0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
     "image-webpack-loader": "^2.0.0",
@@ -45,6 +45,7 @@
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.2",
     "script-ext-html-webpack-plugin": "^1.3.0",
+    "style-ext-html-webpack-plugin": "^2.0.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.1"
